force-app/main/default/objects/Risks_Issues__c/Risks_Issues__c.object-meta.xml
<CustomObject>
    <description>This Object is being used to track Risks &amp; Issues on Projects. This object is not linked to PSA.</description>
    <label>Risk &amp; Issue</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Risks &amp; Issues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks &amp; Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>