force-app/main/default/objects/Risks_Issues__c/fields/Action_Plan__c.field-meta.xml
<CustomField>
    <fullName>Action_Plan__c</fullName>
    <description>Please outline the Action Plan to fix the Issue outlined</description>
    <inlineHelpText>Please outline the Action Plan to fix the Issue outlined</inlineHelpText>
    <label>Action Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>