force-app/main/default/objects/Risks_Issues__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <description>The Closed Date of the Risk or Issue</description>
    <inlineHelpText>The Closed Date of the Risk or Issue</inlineHelpText>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>