force-app/main/default/objects/Risks_Issues__c/fields/Customer_Facing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Facing__c</fullName>
    <inlineHelpText>This field helps delineate between a Risk and Issue that needs to be visible to the client and one that should not</inlineHelpText>
    <label>Customer Facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Facing</valueSetName>
    </valueSet>
</CustomField>