force-app/main/default/objects/Risks_Issues__c/fields/Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>Date_Raised__c</fullName>
    <description>The date that the Risk or Issue was raised to the Project Manager</description>
    <label>Date Raised</label>
    <type>Date</type>
</CustomField>