force-app/main/default/objects/Risks_Issues__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The Description of the Risk or Issue being logged</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>