force-app/main/default/objects/Risks_Issues__c/fields/Expected_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Close_Date__c</fullName>
    <description>This Date should be the Date for which we are trying to mitigate or fix the Risk or Issue</description>
    <inlineHelpText>This Date should be the Date for which we are trying to mitigate or fix the Risk or Issue</inlineHelpText>
    <label>Expected Close Date</label>
    <type>Date</type>
</CustomField>