force-app/main/default/objects/Risks_Issues__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <description>This field is used to determine the impact of the Risk or Issue on the project.</description>
    <inlineHelpText>When choosing an option, please take into account the following areas: Cost, Schedule, Scope &amp; Quality.</inlineHelpText>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>