force-app/main/default/objects/Risks_Issues__c/fields/isCreatedfromTemplate__c.field-meta.xml
<CustomField>
    <fullName>isCreatedfromTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the risk/issue was created from a template</description>
    <inlineHelpText>Indicates the risk/issue was created from a template</inlineHelpText>
    <label>Created from Template</label>
    <type>Checkbox</type>
</CustomField>