force-app/main/default/objects/Risks_Issues__c/fields/IsProjectPMSet__c.field-meta.xml
<CustomField>
    <fullName>IsProjectPMSet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the Project PM has been assigned</description>
    <inlineHelpText>Indicates that the Project PM has been assigned</inlineHelpText>
    <label>Is Project PM Set</label>
    <type>Checkbox</type>
</CustomField>