force-app/main/default/objects/Risks_Issues__c/fields/Mitigation_Steps__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Steps__c</fullName>
    <description>Please outline the steps needed to completely mitigate the Risk.</description>
    <inlineHelpText>Please outline the steps needed to completely mitigate the Risk.</inlineHelpText>
    <label>Mitigation Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>