force-app/main/default/objects/Risks_Issues__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>The Name of the Risk or Issue being logged</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>