force-app/main/default/objects/Risks_Issues__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Owner of the Risk or Issue. The person who will be mitigating or fixing the item.</description>
    <inlineHelpText>The Owner of the Risk or Issue. The person who will be mitigating or fixing the item.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Risks &amp; Issues</relationshipLabel>
    <relationshipName>Risks_Issues</relationshipName>
    <type>Lookup</type>
</CustomField>