force-app/main/default/objects/Risks_Issues__c/fields/Probability__c.field-meta.xml
<CustomField>
    <fullName>Probability__c</fullName>
    <description>High Probability - 80 -&gt; 100%
Medium-High Probability - 60 -&gt; 80%
Medium-Low Probability - 30 -&gt; 60%
Low Probability - 0 -&gt; 30%</description>
    <inlineHelpText>High Probability - 80 -&gt; 100%
Medium-High Probability - 60 -&gt; 80%
Medium-Low Probability - 30 -&gt; 60%
Low Probability - 0 -&gt; 30%</inlineHelpText>
    <label>Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium-High</fullName>
                <isActive>false</isActive>
                <label>Medium-High</label>
            </value>
            <value>
                <fullName>Medium-Low</fullName>
                <isActive>false</isActive>
                <label>Medium-Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>