force-app/main/default/objects/Risks_Issues__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>The Project to which this Risk or Issue is linked</description>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Risk &amp; Issue Log</relationshipLabel>
    <relationshipName>Risks_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>