force-app/main/default/objects/Risks_Issues__c/fields/Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>Severity_Level__c</fullName>
    <description>This field shows the Severity Level of each Risk or Issue in a color</description>
    <formula>IMAGE(
IF(
				OR(
				   AND(
								    OR(ISPICKVAL(Probability__c, &quot;High&quot;)
											 ,
											 ISPICKVAL(Probability__c, &quot;Medium-High&quot;)
										 	,
											 ISPICKVAL(Probability__c, &quot;Medium-Low&quot;)
											 )
								  ,
								    ISPICKVAL(Impact__c, &quot;High&quot;)
									 )
							,
							AND(ISPICKVAL(Probability__c, &quot;High&quot;),ISPICKVAL(Impact__c, &quot;Medium&quot;))
							)
, &quot;/img/samples/light_red.gif&quot;,
IF(
				OR(
				  AND(
								  OR(
											  ISPICKVAL(Probability__c, &quot;Medium-High&quot;)
											  ,
											  ISPICKVAL(Probability__c, &quot;Medium-Low&quot;)
										  	)
							  ,
								 ISPICKVAL(Impact__c, &quot;Medium&quot;)
									)
						,
						AND(ISPICKVAL(Probability__c, &quot;Low&quot;),ISPICKVAL(Impact__c, &quot;High&quot;))
						)
, &quot;/img/samples/light_yellow.gif&quot;,
IF(
				OR(
				  AND(
								  OR(ISPICKVAL(Probability__c, &quot;High&quot;)
											  ,
											  ISPICKVAL(Probability__c, &quot;Medium-High&quot;)
											  ,
										  	ISPICKVAL(Probability__c, &quot;Medium-Low&quot;)
										  	,
										  	ISPICKVAL(Probability__c, &quot;Low&quot;)
											  )
								 ,
							  ISPICKVAL(Impact__c, &quot;Low&quot;)
									)
						,
						AND(ISPICKVAL(Probability__c, &quot;Low&quot;),ISPICKVAL(Impact__c, &quot;Medium&quot;))
						)
, &quot;/img/samples/light_green.gif&quot;,&quot;/img/samples/light_red.gif&quot;
))),&quot;Risk Level&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field shows the Severity Level of each Risk or Issue in a color</inlineHelpText>
    <label>Severity Level</label>
    <type>Text</type>
</CustomField>