force-app/main/default/objects/Risks_Issues__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Issue_Status</valueSetName>
    </valueSet>
</CustomField>