force-app/main/default/objects/Risks_Issues__c/fields/TemplateId__c.field-meta.xml
<CustomField>
    <fullName>TemplateId__c</fullName>
    <label>TemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>