force-app/main/default/objects/Risks_Issues__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>This field outlines the Types of Risks &amp; Issues you may choose from.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Risk_Issue_Types</valueSetName>
    </valueSet>
</CustomField>