force-app/main/default/objects/Risks_Issues__c/recordTypes/Issue.recordType-meta.xml
<RecordType>
    <fullName>Issue</fullName>
    <active>true</active>
    <description>This Record Type is used to track Issues for a project</description>
    <label>Issue</label>
</RecordType>