force-app/main/default/objects/Risks_Issues__c/recordTypes/Risk.recordType-meta.xml
<RecordType>
    <fullName>Risk</fullName>
    <active>true</active>
    <description>This Record Type is used to track Risks for a project</description>
    <label>Risk</label>
</RecordType>